Agregado de menú desplegable

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
     <header>
         <img src="assets\MascotasFood.png" alt= "logo">
     </header>
-     <nav>
-        <section>
-        <a href="">Home</a>
-        <a href="">Productos</a>
-        <a href="">Nosotros</a>
-        <a href="">Contactanos</a>
-        </section>
+     <nav class="navegacion">
+        <ul class="menu">
+       <li><a href="">Home</a></li>
+        <li><a href="">Productos</a>
+            <ul class="submenu">
+               <li><a>Alimentos secos</a>
+                 <ul class="subsubmenu">
+                <li><a href="">Perros</a></li>
+                <li><a href="">Gatos</a></li>
+                  </ul></li>
+               <li><a href="">Cuidados e higiene</a></li>
+               <li><a href="">Juguetes y camas</a></li>
+            </ul>
+        </li>
+        <li> <a href="">Nosotros</a></li>
+            <li><a href="">Contactanos</a></li>
+    </ul>
     </nav> 
 
     <script src="script.js"></script>
