--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <header>
-        <img src="assets\MascotasFood.png" alt= "logo">
-    </header>
-     <nav class="navegacion">
-        <ul class="menu">
+        <div class="menu_bar">
+            <a href="#">
+        <img src="assets\MascotasFood.png" alt= "logo"></a>
+        </div>
+         <nav class="navegacion">
+     
+        <ul class="menu" id="menu">
        <li><a href="">Home</a></li>
-        <li><a href="">Productos</a>
+        <li><a href="">Productos</a><span><img src="assets/abajo.png" style="height: 10px; width: 10px;"></span>
             <ul class="submenu">
                <li><a>Alimentos secos</a>
                  <ul class="subsubmenu">
@@ -28,7 +31,7 @@
             <li><a href="">Contactanos</a></li>
     </ul>
     </nav> 
-
-    <script src="script.js"></script>
+    </header>
+    <script src="main.js"></script>
 </body>
 </html>
