--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="main.js"></script>
+    <title>Mascota Food</title>
 </head>
 <body>
     <header>
-        <div class="menu_bar">
-            <a href="#">
+                  <a href="#">
         <img src="assets\MascotasFood.png" alt= "logo"></a>
-        </div>
+        <div class="container">                        
+            <input type="text" placeholder="Busca tu marca preferida..">            
+            <div class="btn">
+                <i class="fa fa-search" ></i>
+            </div>
+        </div>      
+
          <nav class="navegacion">
      
         <ul class="menu" id="menu">
@@ -32,6 +39,6 @@
     </ul>
     </nav> 
     </header>
-    <script src="main.js"></script>
+    
 </body>
 </html>
