--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li><a href="">Contáctanos</a></li>
             </ul>
         </nav>
-        <section class="banner">
+        <section class="banner-slider">
             <img src="assets/pexels-lumn-406014.jpg" alt="" class="imagenBanner">
         </section>
     </header>
