--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <body>
     <header>
         <div class="container">
+            <button class="nav-toggle" onclick="click"><i class='bx bx-menu'></i></button>
             <a href="index.html">
                 <img src="assets\MascotasFood.png" alt="logo" class="logo"></a>
             <input id="buscador" type="text" placeholder="Busca tu marca preferida..">
-             <button class="nav-toggle"><i class='bx bx-menu'></i></button>
+           
         </div>
         <nav class="navegacion">
             <ul class="menu nav-menu_visible" id="menu">
