--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="container">
-            <button class="nav-toggle" onclick="click"><i class='bx bx-menu'></i></button>
+            <button class="nav-toggle"><i class='bx bx-menu'></i></button>
             <a href="index.html">
                 <img src="assets\MascotasFood.png" alt="logo" class="logo"></a>
             <input id="buscador" type="text" placeholder="Busca tu marca preferida..">
@@ -24,8 +24,8 @@
         </div>
         <nav class="navegacion">
             <ul class="menu nav-menu_visible" id="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">Productos</a>
+                <li><a href="#">Home</a></li>
+                <li><a href="/secciones/productos/productos.html">Productos</a>
                     <ul class="submenu">
                         <li><a href="">Alimentos</a>
                             <ul class="subsubmenu">
@@ -47,8 +47,8 @@
                         <li><a href="">Juguetes y camas</a></li>
                     </ul>
                 </li>
-                <li> <a href="">Nosotros</a></li>
-                <li><a href="">Contáctanos</a></li>
+                <li> <a href="/secciones/nosotros/nosotros.html">Nosotros</a></li>
+                <li><a href="/secciones/contactanos/contactanos.html">Contáctanos</a></li>
             </ul>
         </nav>
         <section class="banner-slider">
