--- a/index.html
+++ b/index.html
@@ -15,46 +15,17 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <button class="nav-toggle"><i class='bx bx-menu'></i></button>
-            <a href="index.html">
-                <img src="assets\MascotasFood.png" alt="logo" class="logo"></a>
-            <input id="buscador" type="text" placeholder="Busca tu marca preferida..">
-           
-        </div>
-        <nav class="navegacion">
-            <ul class="menu nav-menu_visible" id="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="/secciones/productos/productos.html">Productos</a>
-                    <ul class="submenu">
-                        <li><a href="">Alimentos</a>
-                            <ul class="subsubmenu">
-                                <li id="Perros"><a href="">Perros</a>
-                                    <ul class="menuPerros">
-                                        <li><a href="">Secos</a></li>
-                                        <li><a href="">Húmedos</a></li>
-                                    </ul>
-                                </li>
-                                <li id="Gatos"><a href="">Gatos</a>
-                                    <ul class="menuGatos">
-                                        <li><a href="">Secos</a></li>
-                                        <li><a href="">Húmedos</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="">Cuidados e higiene</a></li>
-                        <li><a href="">Juguetes y camas</a></li>
-                    </ul>
-                </li>
-                <li> <a href="/secciones/nosotros/nosotros.html">Nosotros</a></li>
-                <li><a href="/secciones/contactanos/contactanos.html">Contáctanos</a></li>
-            </ul>
-        </nav>
-        <section class="banner-slider">
-            <img src="assets/pexels-lumn-406014.jpg" alt="" class="imagenBanner">
-        </section>
+        <iframe src="/secciones/navbar/navbar.html"  width="100%" height="100%"></iframe>
     </header>
+    <div class="wrapper">
+       <div class="portada">
+        <h1>
+            Encuentra lo que necesites para tus mascotas.
+        </h1>
+    </div>
+    <div>    </div>
+    <div></div>
+    </div>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
