--- a/secciones/contactanos/contactanos.html
+++ b/secciones/contactanos/contactanos.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="contactanos.css">
+    <title>MascotaFood</title>
 </head>
 <body>
-    
+    <header>
+        <iframe src="/secciones/navbar/navbar.html" frameborder="0" width="100%" height="100%"></iframe>
+    </header>
 </body>
 </html>
