--- a/index.html
+++ b/index.html
@@ -9,23 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <script defer src="index.js"></script>
-    
     <title>Mascota Food</title>
 </head>
 <body>
+
     <header>
-        <iframe src="/secciones/navbar/navbar.html"  width="100%" height="100%"></iframe>
+        <iframe class="navbar" src="/secciones/navbar/navbar.html"  width="100%" height="60%"></iframe>
     </header>
-    <div class="wrapper">
-       <div class="portada">
-        <h1>
-            Encuentra lo que necesites para tus mascotas.
-        </h1>
+
+    <div class="slider">
+        <iframe class="slider__s" src="/secciones/slider/slider.html" width="100%" height="100%"></iframe>
     </div>
-    <div>    </div>
-    <div></div>
-    </div>
+
+    <script src="index.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
