--- a/secciones/navbar/navbar.html
+++ b/secciones/navbar/navbar.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="navbar.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script defer src="navbar.js"></script>
+    <script  src="navbar.js"></script>
 </head>
 <header>
     <div class="container">
@@ -12,7 +12,7 @@
     </div>
     <nav class="navegacion">
         <ul class="menu nav-menu_visible" id="menu">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/index.html" target="_parent">Home</a></li>
             <li><a href="/secciones/productos/productos.html" target="_parent">Productos</a>
                 <ul class="submenu">
                     <li><a href="">Alimentos</a>
