--- a/secciones/nosotros/nosotros.html
+++ b/secciones/nosotros/nosotros.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="nosotros.css">
+
     <title>Document</title>
 </head>
 <body>
     <header>
-        <iframe src="/secciones/navbar/navbar.html" frameborder="0" width="100%" height="100%"></iframe>
+       <div class="navbar-container"></div>
     </header>
+    
+    <script src="/secciones/nosotros/nosotros.js"></script>
+    <script src="/secciones/navbar/navbar.js"></script>
 </body>
 </html>
