--- a/secciones/productos/productos.html
+++ b/secciones/productos/productos.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="productos.css">
     <title>Document</title>
+    <link rel="stylesheet" href="/secciones/navbar/navbar.css">
+    
+    <title>MascotaFood</title>
 </head>
+
 <body>
-    <header>
-        <iframe src="/secciones/navbar/navbar.html" frameborder="0" width="100%" height="100%"></iframe>
+    <header>        
+        <div id="navbar-container"></div>
     </header>
+    <script src="/secciones/productos/productos.js"></script> 
+    <script src="/secciones/navbar/navbar.js"></script>
+    
 </body>
 </html>
