--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-
 <title>Mascota Food</title>
 </head>
 <body>
 
 <header>
-        <div id="navbar-container"></div>
+  <div id="navbar-container"></div>
 </header>
  
 <div class="slider-container">
@@ -34,8 +33,7 @@
 </div>
 
 <script src="index.js"></script>
-<script src="/secciones/navbar/navbar.js"></script>
-
+<script src="./secciones/navbar/navbar.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
