--- a/secciones/navbar/navbar.html
+++ b/secciones/navbar/navbar.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/secciones/navbar/navbar.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script defer  src="/secciones/navbar/navbar.js"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
+   
 </head>
+<body>
 <header>
     <div class="container">
         <button class="nav-toggle"><i class='bx bx-menu'></i></button>
-        <a href="index.html">
+         <a href="index.html">
             <img src="../../assets/MascotasFood.png" alt="logo" class="logo"></a>
         <input id="buscador" type="text" placeholder="Busca tu marca preferida..">           
     </div>
@@ -44,3 +41,5 @@
         </ul>
     </nav>    
 </header>
+<script src="/secciones/navbar/navbar.js"></script>
+</body>
