--- a/secciones/nosotros/nosotros.html
+++ b/secciones/nosotros/nosotros.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="nosotros.css">
-
-    <title>Document</title>
+    <link rel="stylesheet" href="nosotros.css">    
+    <link rel="stylesheet" href="/secciones/navbar/navbar.css">    
+    <title>MascotaFood</title>
 </head>
+
 <body>
-    <header>
-       <div class="navbar-container"></div>
+    <header>        
+        <div id="navbar-container"></div>
     </header>
-    
-    <script src="/secciones/nosotros/nosotros.js"></script>
+    <script src="/secciones/nosotros/nosotros.js"></script> 
     <script src="/secciones/navbar/navbar.js"></script>
+    
 </body>
 </html>
