--- a/index.html
+++ b/index.html
@@ -16,20 +16,14 @@
   <div id="navbar-container"></div>
 </header>
  
-<div class="slider-container">
-  <div class="slider" id="slider">
-    <div class="slider__section">
-<img src="/assets/2310-Website-Banner-Gato-Alimento-Royal-Canin-156288----100119----D.png" class="slider-img">
-  </div>
-  <div class="slider__section">
-<img src="/assets/2310-Website-Banner-Perro-Alimento-Balanced-121094----121123----D.png" class="slider-img">
-  </div>
-  <div class="slider__section">
-<img src="/assets/2310-Website-Banner-Perro-y-Gato-Humedos-Sieger-132171--3x2--132181--3x2--D.png" class="slider-img">
-    </div>  
-  </div>
-  <div class="slider-btn slider-btn-right" id="btn-right">&#62;</div>
-  <div class="slider-btn slider-btn-left" id="btn-left">&#60;</div>
+
+
+<div class="portada">
+  <h1>Queremos lo mejor para tus mascotas</h1>
+  <h2>Acá seguro lo encontras</h2>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, consectetur! Excepturi suscipit maxime minus asperiores pariatur temporibus distinctio harum enim.</p> 
+  
+
 </div>
 
 <script src="index.js"></script>
