--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 </header>
  
 
-
 <div class="portada">
-  <h1>Queremos lo mejor para tus mascotas</h1>
-  <h2>Acá seguro lo encontras</h2>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, consectetur! Excepturi suscipit maxime minus asperiores pariatur temporibus distinctio harum enim.</p> 
-  
-
+  <h1>Descubre el Paraíso de los Sabores para tus Mascotas</h1>
+  <p>En MascotaFood entendemos que tu mascota merece lo mejor, y eso es exactamente lo que ofrecemos. Desde una gran variedad de deliciosos alimentos hasta juguetes y accesorios que los harán saltar de alegría, aquí encontrarás todo lo que necesitas para consentir a tu compañero de cuatro patas.</p>
+  <h2>¡Únete a nuestra comunidad de amantes de las mascotas y descubre un mundo de sabor y diversión! ¡Tu mascota te lo agradecerá!</h2> 
 </div>
 
 <script src="index.js"></script>
