--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<header>
+<header class="navbar">
   <div id="navbar-container"></div>
 </header>
  
@@ -23,8 +23,21 @@
   <h2>¡Únete a nuestra comunidad de amantes de las mascotas y descubre un mundo de sabor y diversión! ¡Tu mascota te lo agradecerá!</h2> 
 </div>
 
-<script src="index.js"></script>
+<footer>  
+  <div class="foot">
+    <h3>Quiénes somos</h3>        
+      <p><a href="#">Sobre nosotros</a></p>
+  </div>
+  <div class="foot2">
+    <h3>Info que te interesa</h3>    
+      <p><a href="#">Políticas de devoluciones</a></p>
+      <p><a href="#">Sobre nuestros envíos</a></p>   
+      <p><a href="#">Trabajá con nosotros</a></p>
+    </div>
+</footer>
+
 <script src="./secciones/navbar/navbar.js"></script>
+<script src="index.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
