--- a/secciones/productos/productos.html
+++ b/secciones/productos/productos.html
@@ -23,13 +23,13 @@
         </div>
         <div class="slider__section">
           <img
-            src="../..//assets/2310-Website-Banner-Perro-Alimento-Balanced-121094----121123----D.png"
+            src="../../assets/2310-Website-Banner-Perro-Alimento-Balanced-121094----121123----D.png"
             class="slider-img"
           />
         </div>
         <div class="slider__section">
           <img
-            src="../..//assets/2310-Website-Banner-Perro-y-Gato-Humedos-Sieger-132171--3x2--132181--3x2--D.png"
+            src="../../assets/2310-Website-Banner-Perro-y-Gato-Humedos-Sieger-132171--3x2--132181--3x2--D.png"
             class="slider-img"
           />
         </div>
@@ -38,9 +38,10 @@
       <div class="slider-btn slider-btn-left" id="btn-left">&#60;</div>
     </div>
 
+
     <div class="Tienda">
       <div class="header-tienda">
-        <h2 class="titulo-tienda">Tienda Online</h2>
+        <h2 class="titulo-tienda">Tienda </h2>
         <div class="container-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -65,8 +66,8 @@
             <img
               src="../../assets/Royalcaninmini.webp"
               alt="Royal canin"
-              height="300"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -83,8 +84,8 @@
             <img
               src="../../assets/dogproadultos.webp"
               alt="Dog pro adultos"
-              height="300px"
-              width="300px"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -101,8 +102,8 @@
             <img
               src="../../assets/criadoresadultos.webp"
               alt="Criadores adultos"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -119,8 +120,8 @@
             <img
               src="../../assets/vitalcancachorro.webp"
               alt="Vitalcan cachorro"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -137,8 +138,8 @@
             <img
               src="../../assets/criadoresadultos.webp"
               alt="Nutricare adultos"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -155,8 +156,8 @@
             <img
               src="../../assets/dogproadultospeque.webp"
               alt="Dogpro adulto"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -173,8 +174,8 @@
             <img
               src="../../assets/agility.webp"
               alt="agility"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -191,8 +192,8 @@
             <img
               src="../../assets/purinaexellent.webp"
               alt="Purina exellent"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
@@ -209,8 +210,8 @@
             <img
               src="../../assets/oldprince.webp"
               alt="oldprince"
-              height="450"
-              width="300"
+              height="100%"
+              width="100%"
             />
           </figure>
           <div class="info-product">
