--- a/secciones/nosotros/nosotros.html
+++ b/secciones/nosotros/nosotros.html
@@ -12,6 +12,21 @@
     <header>        
         <div id="navbar-container"></div>
     </header>
+
+    <div id="Nosotros">
+        <div class="historia">
+            <h2>Historia</h2>
+            <p>Mascota Food es una empresa dedicada a la venta de alimentos y productos para mascotas. Nuestro primer local fue inaugurado hace más de 10 años en San Isidro. Desde ese momento trabajamos día a día para que las mascotas de las familias se encuentren saludables, felices y entretenidas. Es por esto que ofrecemos alimento de primera calidad, un servicio personalizado y buena atención.</p>
+            <p>A lo largo de estos años Mascota Food ha logrado ser reconocida por los clientes y también por las empresas proveedoras de sus productos, generando una buena reputación y un nivel de confianza firme que queda reflejado en los años de trabajo en conjunto. Podés visitar nuestras sucursales para conocernos aún más.</p>
+        </div>
+
+        <div class="qs">
+            <h2>¿Quiénes somos?</h2>
+            <p>Somos un grupo familiar, padre y dos hijos, que decidimos emprender en un nuevo rubro y continuar con la historia y expansión de MascotaFood en la ciudad de La Plata y alrededores.</p>
+            <p>Desde julio del año 2022 que comenzamos con la idea y puesta en marcha del negocio para brindarle un servicio de calidad a la gente que tanto ama y cuida a sus mascotas, y para estar a la altura lo mejor es ofrecer un servicio y atención personalizada atendiendo y ayudando al cliente a elegir lo mejor para su mascota y brindando todas las facilidades de pago y seguimiento posventa para que siempre se encuentre acompañado, sabiendo que siempre va a tener lo que precise para su mascota.</p>
+        </div>
+    </div>
+
     <script src="/secciones/nosotros/nosotros.js"></script> 
     <script src="/secciones/navbar/navbar.js"></script>
     
