--- a/secciones/navbar/navbar.html
+++ b/secciones/navbar/navbar.html
@@ -11,7 +11,7 @@
             <button class="nav-toggle"><i class='bx bx-menu'></i></button>
              <a href="/index.html">
                 <img src="../../assets/MascotasFood.png" alt="logo" class="logo"></a>
-            <input id="buscador" type="text" placeholder="Busca tu marca preferida..">           
+            <input class="buscador" id="buscador" type="text" placeholder="Busca tu marca preferida..">           
         </div>
         <nav class="navegacion">
             <ul class="menu" id="menu">
