--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <div class="portada">
   <h1>Descubre el Paraíso de los Sabores para tus Mascotas</h1>
   <p>En MascotaFood entendemos que tu mascota merece lo mejor, y eso es exactamente lo que ofrecemos. Desde una gran variedad de deliciosos alimentos hasta juguetes y accesorios que los harán saltar de alegría, aquí encontrarás todo lo que necesitas para consentir a tu compañero de cuatro patas.</p>
-  <h2>¡Únete a nuestra comunidad de amantes de las mascotas y descubre un mundo de sabor y diversión! ¡Tu mascota te lo agradecerá!</h2> 
+  <p class="pabajo">¡Únete a nuestra comunidad de amantes de las mascotas y descubre un mundo de sabor y diversión! ¡Tu mascota te lo agradecerá!</p> 
 </div>
+
 
 <footer>  
   <div class="foot">
