--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
   <p>En MascotaFood entendemos que tu mascota merece lo mejor, y eso es exactamente lo que ofrecemos. Desde una gran variedad de deliciosos alimentos hasta juguetes y accesorios que los harán saltar de alegría, aquí encontrarás todo lo que necesitas para consentir a tu compañero de cuatro patas.</p>
   <p class="pabajo">¡Únete a nuestra comunidad de amantes de las mascotas y descubre un mundo de sabor y diversión! ¡Tu mascota te lo agradecerá!</p> 
 </div>
+ 
 
+<div class="section2">
+  <div class="grupo2">
+  <h2 class="subtitulo">Soy un titulo</h2>  
+  <p class="texto2">Cuidar y dar lo mejor a nuestras mascotas es esencial. Proporcionar atención, nutrición adecuada, ejercicio y afecto garantiza su salud y bienestar, y fortalece nuestro vínculo con ellos. Por eso contamos con alimentos de excelente calidad y juguetes resistentes para satisfacer sus necesidades. ¡Dale lo mejor a tu mascota!</p>
+  </div>
+  <div class="imagefloat"> <img id="imagenflt" src="assets/imagen1.jpeg" alt=""></div>
+</div>
 
 <footer>  
+  <div class="footer-caja">
+ <div class="foot-container">
   <div class="foot">
     <h3>Quiénes somos</h3>        
       <p><a href="#">Sobre nosotros</a></p>
@@ -34,7 +44,24 @@
       <p><a href="#">Políticas de devoluciones</a></p>
       <p><a href="#">Sobre nuestros envíos</a></p>   
       <p><a href="#">Trabajá con nosotros</a></p>
-    </div>
+    </div>       
+ </div>
+ <div class="redes">
+  <h3>Seguinos en nuestras redes</h3>  
+      <section class="redesbutton">
+        <a href="">
+        <i class='bx bxl-facebook-circle'></i>
+      </a>   
+      <a href="">
+        <i class='bx bxl-instagram' ></i>
+      </a>    
+      </section>
+ </div>
+ <div class="footer-image"><img class="imagenfooter" src="/assets/imagen footer.png"></div>  
+</div>
+ <div class="copy">
+    <p> 2023 © | Mascota Food</p><p>Desarrollado por Estudiantes de "Codo a Codo"</p>
+    </div>    
 </footer>
 
 <script src="./secciones/navbar/navbar.js"></script>
