--- a/secciones/productos/productos.html
+++ b/secciones/productos/productos.html
@@ -225,6 +225,39 @@
       </div>
     </div>
 
+
+    <footer>  
+      <div class="footer-caja">
+     <div class="foot-container">
+      <div class="foot">
+        <h3>Quiénes somos</h3>        
+          <p><a href="#">Sobre nosotros</a></p>
+      </div>
+      <div class="foot2">
+        <h3>Info que te interesa</h3>    
+          <p><a href="#">Políticas de devoluciones</a></p>
+          <p><a href="#">Sobre nuestros envíos</a></p>   
+          <p><a href="#">Trabajá con nosotros</a></p>
+        </div>       
+     </div>
+     <div class="redes">
+      <h3>Seguinos en nuestras redes</h3>  
+          <section class="redesbutton">
+            <a href="">
+            <i class='bx bxl-facebook-circle'></i>
+          </a>   
+          <a href="">
+            <i class='bx bxl-instagram' ></i>
+          </a>    
+          </section>
+     </div>
+     <div class="footer-image"><img class="imagenfooter" src="/assets/imagen footer.png"></div>  
+    </div>
+     <div class="copy">
+        <p> 2023 © | Mascota Food</p><p>Desarrollado por Estudiantes de "Codo a Codo"</p>
+        </div>    
+    </footer>
+
     <script src="/secciones/productos/productos.js"></script>
     <script src="/secciones/navbar/navbar.js"></script>
   </body>
