--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="section2">
   <div class="grupo2">
-  <h2 class="subtitulo">Soy un titulo</h2>  
+  <h2 class="subtitulo">Sabemos que</h2>  
   <p class="texto2">Cuidar y dar lo mejor a nuestras mascotas es esencial. Proporcionar atención, nutrición adecuada, ejercicio y afecto garantiza su salud y bienestar, y fortalece nuestro vínculo con ellos. Por eso contamos con alimentos de excelente calidad y juguetes resistentes para satisfacer sus necesidades. ¡Dale lo mejor a tu mascota!</p>
   </div>
   <div class="imagefloat"> <img id="imagenflt" src="assets/imagen1.jpeg" alt=""></div>
