--- a/secciones/contactanos/contactanos.html
+++ b/secciones/contactanos/contactanos.html
@@ -13,7 +13,7 @@
 
    <section class="formclass">
          <div class="form-container">
-          <h2 class="titulo">Contactenos</h2>
+          <h2 class="titulo">Contactanos</h2>
           <form id="myForm" onsubmit="return validarFormulario()">
 
             <input type="text" class="casilla" id="nombre" name="nombre" placeholder="Nombre" autocomplete="on" required><br>
@@ -22,7 +22,7 @@
 
             <textarea id="consulta" name="consulta" rows="4" cols="50" placeholder="Consulta" required></textarea><br>
 
-            <input class="enviar" type="submit" value="Enviar">
+           <input class="enviar" type="submit" value="Enviar">
         </form>
         </div>
         <div id="customAlert" class="hidden">
