--- a/secciones/navbar/navbar.html
+++ b/secciones/navbar/navbar.html
@@ -10,7 +10,7 @@
         <div class="caja">
             <button class="nav-toggle"><i class='bx bx-menu'></i></button>
              <a href="/index.html">
-                <img src="../../assets/MascotasFood.png" alt="logo" class="logo"></a>
+                <img src="../../assets/Logo.png" alt="logo" class="logo"></a>
             <input class="buscador" id="buscador" type="text" placeholder="Busca tu marca preferida..">          
       
         <nav class="navegacion">
