--- a/secciones/productos/productos.html
+++ b/secciones/productos/productos.html
@@ -41,7 +41,7 @@
 
     <div class="Tienda">
       <div class="header-tienda">
-        <h2 class="titulo-tienda">Tienda </h2>
+        <h2 class="titulo-tienda">Descubrí los mejores productos para tu mascota</h2>
         <div class="container-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
