Añadimos carrito.html

--- a/secciones/productos/productos.html
+++ b/secciones/productos/productos.html
@@ -43,7 +43,7 @@
       <div class="header-tienda">
         <h2 class="titulo-tienda">Descubrí los mejores productos para tu mascota</h2>
               <div class="container-icon">
-         <img class="img-icon" src="/assets/carrito-de-compras(1).png">
+         <a href="/secciones/productos/Carrito.html"><img class="img-icon" src="/assets/carrito-de-compras(1).png"></a>
          <div id="contadorCarrito">0</div>
         </div>
       </div>
